rust/macros/tests/invalid/target/rls/debug/deps/triple_arguments_rs-ed3c6075243e8940.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\triple_arguments_rs-ed3c6075243e8940.rmeta: triple-arguments.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\triple_arguments_rs-ed3c6075243e8940.d: triple-arguments.rs

triple-arguments.rs:
